<resources>
    <string name="custom_font_path">fonts/Roboto-RobotoRegular.ttf</string>
    <string name="tab_to_show_key_name">tabToShow</string>
    <string name="detail_title">detailTitle</string>
    <string name="detail_desc">detailDescription</string>
    <string name="detail_address">detailAddress</string>
    <string name="detail_info">detailInfo</string>
    <string name="detail_switcher">detailSwitcher</string>
    <string name="exp_list_section">sectionNumber</string>
    <string name="app_name">Vienna Calling</string>
    <string name="title_activity_categories">Chose Interest</string>
    <string name="title_activity_detail">Learn more</string>
    <string name="headline_home_header">vienna</string>
    <string name="headline_home_hotels">hotels</string>
    <string name="headline_home_events">events</string>
    <string name="headline_home_sightseeing">sightseeing</string>
    <string name="headline_home_nightlife">nightlife</string>
    <string name="headline_home_more">more info</string>
    <string name="label_category_tab_hotel">Hotels</string>
    <string name="label_category_tab_event">Events</string>
    <string name="label_category_tab_sightseeing">Sights</string>
    <string name="label_category_tab_nightlife">Nightlife</string>
    <string name="label_category_tab_more">More</string>
    <string name="categories_map_title">Vienna</string>
    <string name="categories_map_snippet">Capital City of Austria</string>
    <string name="location_item_hotels_titles_00">Park Hyatt</string>
    <string name="location_item_hotels_titles_01">Hotel Imperial</string>
    <string name="location_item_hotels_titles_02">Palais Coburg Residence</string>
    <string name="location_item_hotels_titles_03">Hilton Vienna</string>
    <string name="location_item_hotels_titles_04">Arcotel Wimberger</string>
    <string name="location_item_hotels_titles_05">Star Inn Hotel</string>
    <string name="location_item_hotels_sub_00">5-Star Hotel</string>
    <string name="location_item_hotels_sub_01">5-Star Hotel</string>
    <string name="location_item_hotels_sub_02">5-Star Hotel</string>
    <string name="location_item_hotels_sub_03">4-Star Hotel</string>
    <string name="location_item_hotels_sub_04">4-Star Hotel</string>
    <string name="location_item_hotels_sub_05">3-Star Hotel</string>
    <string name="location_item_hotels_body_00">1900s hotel with a luxe spa, an indoor pool &amp; refined dining.</string>
    <string name="location_item_hotels_body_01">Upscale quarters in a grand, 19th-century hotel.</string>
    <string name="location_item_hotels_body_02">Opulent lodging in a 19th-century palace.</string>
    <string name="location_item_hotels_body_03">Upscale rooms in a refined hotel.</string>
    <string name="location_item_hotels_body_04">Chic colonial hotel with an elegant restaurant.</string>
    <string name="location_item_hotels_body_05">Polished hotel in a contemporary building.</string>
    <string name="location_item_hotels_address_00">Am Hof 2, 1010 Wien</string>
    <string name="location_item_hotels_address_01">Kärntner Ring 16, 1015 Wien</string>
    <string name="location_item_hotels_address_02">Coburgbastei 4, 1010 Wien</string>
    <string name="location_item_hotels_address_03">Am Stadtpark 1, 1030 Wien</string>
    <string name="location_item_hotels_address_04">Neubaugürtel 34 &#8211; 36, 1070 Wien</string>
    <string name="location_item_hotels_address_05">Linke Wienzeile 224, 1150 Wien</string>
    <string name="location_item_hotels_desc_00">
            This lavish hotel in an early 20th-century former bank is a 6-minute walk from Hofburg Imperial Palace and a 7-minute walk from St. Stephen\'s Cathedral.
            \n\nThe plush rooms and suites mix contemporary with traditional Viennese decor, and feature free Wi-Fi and coffeemakers, along with flat-screen TVs, minibars and designer toiletries. Suites add separate living areas. Room service is available.\n\n
            Amenities include a palatial restaurant, a ritzy cocktail bar and an elegant, wood-paneled whisky/cigar lounge. The luxe spa has a heated indoor pool and a fitness center, and there\'s also a refined tea room and a business center. Parking is available (fee).
    </string>
    <string name="location_item_hotels_desc_01">
            In a grand building dating from 1863, this venerable, luxury hotel, with a refined, old-world vibe, is 13 minutes\' walk from Hofburg Palace.
            \n\nFeaturing chandeliers, antiques and marble bathrooms, the elegant rooms come with TVs and limited free Wi-Fi. Suites add opulent decor, and most offer butler service; some include balconies, whirlpool tubs and complimentary minibars.
            \n\nThere\'s a sophisticated restaurant, and a posh piano bar featuring classical music and live performances, as well as a casual cafe offering champagne breakfast. Other amenities include a gym and parking (fee).
    </string>
    <string name="location_item_hotels_desc_02">
            This opulent all-suite hotel in a 19th-century palace is 6 minutes\' walk from the medieval St. Stephen\'s Cathedral and an 11-minute walk from the Vienna State Opera.
            \n\nElegant suites with garden or cathedral views feature kitchenettes, antique furnishings, free Wi-Fi and flat-screen TVs. Some suites offer separate living spaces, rooftop terraces, whirlpool tubs and/or saunas. Upgraded suites have 2 levels. Room service is available.
            \n\nBreakfast is complimentary. There\'s a chic fine-dining restaurant and a glass-enclosed eatery with a terrace. Other amenities include a wine bar, 6 wine cellars and a luxe spa with an indoor pool and a hot tub.
    </string>
    <string name="location_item_hotels_desc_03">
            This polished hotel is a 1-minute walk from an S-Bahn station, an 11-minute stroll from St. Stephen\'s Cathedral and 1.1 km from the Musikverein Wien concert hall.
            \n\nThe upscale rooms come with Wi-Fi (fee), flat-screens, minibars, coffeemakers and desks. Some rooms have city or cathedral views. Executive rooms add access to a private lounge serving breakfast and drinks at no cost. Suites add living areas; some feature balconies and kitchens. Room service is available.
            \n\nThe hotel offers a chic European restaurant and a modern bar. Other amenities include a fitness room, a sauna and a steam room, plus a business center and 17 event rooms.
    </string>
    <string name="location_item_hotels_desc_04">
            A 6-minute walk from both Wien Westbahnhof train station and Wiener Stadthalle event center, this refined brick and glass hotel dating from 1871 is 2.6 km from Hofberg Imperial Palace.
            \n\nThe relaxed rooms feature free Wi-Fi, flat-screens and minibars. Suites add separate living areas and upgraded suites have city views. Room service is available.
            \n\nAmenities include an upscale Viennese restaurant serving a breakfast buffet, weekly jazz buffet (fees), and a vegan menu. There\'s a colonial-style bar, and a spa with saunas, whirlpools and a gym. A business center is available, and there are meeting rooms and conference facilities for up to 970 people.
    </string>
    <string name="location_item_hotels_desc_05">
             This casual hotel is a minute\'s walk from an U-bahn station, 1.8 km from the baroque Schönbrunn Palace and 3.2 km from downtown Vienna.
            \n\nThe unfussy rooms are decorated with classic wood furnishings, and come with desks, complimentary Wi-Fi, flat-screen TVs and minifridges. Upgraded rooms feature leather sofas; suites add separate living areas. Kids 10 and under stay free with an adult.
            \n\nThere\'s an informal 24-hour lobby bar. A breakfast buffet and parking are available for extra fees.
    </string>
    <string name="location_item_events_titles_00">Danube Island Festival</string>
    <string name="location_item_events_titles_01">Vienna Opera Ball</string>
    <string name="location_item_events_titles_02">New Years Concert</string>
    <string name="location_item_events_titles_03">Life Ball</string>
    <string name="location_item_events_titles_04">Christmas Markets</string>
    <string name="location_item_events_titles_05">Festival ImPulsTanz</string>
    <string name="location_item_events_sub_00">every summer</string>
    <string name="location_item_events_sub_01">every february</string>
    <string name="location_item_events_sub_02">31.12 &#8211; 01.01.</string>
    <string name="location_item_events_sub_03">every summer</string>
    <string name="location_item_events_sub_04">every winter</string>
    <string name="location_item_events_sub_05">every summer</string>
    <string name="location_item_events_body_00">Biggest open-air music festival of the world.</string>
    <string name="location_item_events_body_01">Most famous and elegant ballroom in the world.</string>
    <string name="location_item_events_body_02">Start the new year accompanied by the Vienna Philharmonic Orchestra.</string>
    <string name="location_item_events_body_03">The biggest charity event in Europe supporting people with HIV or AIDS.</string>
    <string name="location_item_events_body_04">Throughout the Advent period, Vienna is a city of nostalgia and romance.</string>
    <string name="location_item_events_body_05">Vienna International Dance Festival.</string>
    <string name="location_item_events_address_00">1210 Vienna</string>
    <string name="location_item_events_address_01">Opernring 2, 1010 Wien</string>
    <string name="location_item_events_address_02">Musikvereinsplatz 1, 1010 Wien</string>
    <string name="location_item_events_address_03">Friedrich-Schmidt-Platz 1, 1010 Wien</string>
    <string name="location_item_events_address_04">multiple locations</string>
    <string name="location_item_events_address_05">Neustiftgasse 3, 1070 Wien</string>
    <string name="location_item_events_desc_00">
            According to numerous media reports the Donauinselfest is Europe\'s biggest open-air event; with over 3 million visitors. Some 1500 volunteer assistants and visible police presence help make the Donauinselfest one of the most secure big events.
            \n\nThere are some 21 areas (called "islands" as well) that are normally sponsored by radio stations, newspapers and other companies. These are spread out over a 6.5 kilometer area of the total of 21 kilometer island. Musicians of an extremely broad range of genres perform.
            \n\nThe layout is roughly the same every year, with some stages being removed or added. The musicians also tend to come back every year, or being replaced by other ones that are popular.
            \n\nTo ensure safety of visitors, "house rules" were introduced in 2007 and checkpoint controls established to help control certain items (such as glass and liquor inside the festival perimeter.
            \n\nFood kiosks serve various national and alternative dishes including Thai, Greek, Italian, Indian, Turkish, Vegetarian and Austrian cuisine. Although all concerts are free, financial experts calculate Vienna\'s economy benefits from this event by almost € 40 million, due to the increased tourism.
    </string>
</resources>